# brianscheme

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  anaphoric.sch  bffi.c  bffi.h  boot.sch  bootstrap.sh  bs-build.sch  bs-lib.sch  bs.sch  bsch.booted  bsch.c  cl-defun.sch  clojure-containers.sch  clos-repl.sch  clos.sch  compile-baselib.sch  compiler-repl.sch  compiler.sch  conditions.sch  config.status  configure  configure.ac  dybvig.sch  fancystack.c  fancystack.h  ffi.c  ffi.h  ffi.sch  gc.c  gc.h  get-bytecode.sch  getopt.sch  hash-table.sch  hashtab.c  (+53 more)
.bs/: 0d1da48587686948  1c1bbc95eacf1f9e  799530846efe75c2  b2b37695d5a1c543  cefe00c4dfa414f8  d0e866087c76ca96
clos/: clos-examples.sch  clos.sch  support.sch
examples/: read-macros.sch  spacer.sch
examples/shiney/: shiney.sch
shiney/: game-objects.sch  shiney.org  shiney.sch
slib/: ANNOUNCE  ChangeLog  FAQ  Makefile  README  brianscheme.init  color.scm  colorspc.scm  configure  dirs.scm  dirs.txi  grapheps.ps  guile.init  guile.use  math-integer.scm  math-integer.txi  mkclrnam.scm  mklibcat.scm  require.scm  scheme48.init  slib.info  slib.nsi  slib.sh  slib.spec  slib.texi  version.txi
tests/: ch4-loader.sch  clos-test.sch  compile-compiler.sch  ffi-test.sch  hash-test.sch  hashtest.sch  jit-test.sch  lang-test.sch  list-test.sch  math-test.sch  perf_test.sch  pth-test.sch  random-test.sch  rat-test.sch  read-test.sch  vm-kill-test.sch  vm-perf-test.sch  vm-test.sch
